// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal/HotspotTooltipTab Example with externaly managed state 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="iot--hotspot-tooltip-tab"
      >
        <form
          className="iot--hotspot-editor--tooltip-form"
          data-testid="HotspotTooltipTab"
          onSubmit={[Function]}
        >
          <div
            className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
          >
            <label
              className="bx--label"
              htmlFor="tooltip-form-title"
            >
              Title
            </label>
            <div
              className="bx--text-input__field-outer-wrapper"
            >
              <div
                className="bx--text-input__field-wrapper"
                data-invalid={null}
                data-warn={null}
              >
                <input
                  className="bx--text-input bx--text__input bx--text-input--light"
                  data-testid="HotspotTooltipTab-title-input"
                  disabled={false}
                  id="tooltip-form-title"
                  name="title"
                  onChange={[Function]}
                  onClick={[Function]}
                  placeholder="Enter title for the tooltip"
                  title="Enter title for the tooltip"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="bx--form-item"
          >
            <label
              className="bx--label"
              htmlFor="tooltip-form-description"
            >
              Description
            </label>
            <div
              className="bx--text-area__wrapper"
              data-invalid={null}
            >
              <textarea
                aria-describedby={null}
                aria-invalid={null}
                className="bx--text-area bx--text-area--light"
                cols={50}
                disabled={false}
                id="tooltip-form-description"
                name="description"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="Enter description for the tooltip"
                rows={4}
                value=""
              />
            </div>
          </div>
          <div
            className="iot--icon-color-container"
            style={
              Object {
                "--icon-fill-color": "currentcolor",
              }
            }
          >
            <div
              className="bx--dropdown__wrapper bx--list-box__wrapper"
              warn={false}
              warnText=""
            >
              <label
                className="bx--label"
                htmlFor="downshift-18-toggle-button"
                id="downshift-18-label"
              >
                Icon
              </label>
              <div
                className="bx--dropdown iot--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                id="tooltip-form-icon"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-18-label downshift-18-toggle-button"
                  className="bx--list-box__field"
                  disabled={false}
                  id="downshift-18-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                  >
                    Select an Icon
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title />
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-18-label"
                  className="bx--list-box__menu"
                  id="downshift-18-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="listbox"
                  tabIndex={-1}
                />
              </div>
            </div>
            <div
              className="bx--dropdown__wrapper bx--list-box__wrapper"
            >
              <label
                className="bx--label"
                htmlFor="downshift-19-toggle-button"
                id="downshift-19-label"
              >
                Color
              </label>
              <div
                className="bx--dropdown iot--color-dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                id="tooltip-form-color"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-19-label downshift-19-toggle-button"
                  className="bx--list-box__field"
                  disabled={false}
                  id="downshift-19-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                  >
                    Select a color
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-label="Open menu"
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title>
                        Open menu
                      </title>
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-19-label"
                  className="bx--list-box__menu"
                  id="downshift-19-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="listbox"
                  tabIndex={-1}
                />
              </div>
            </div>
          </div>
        </form>
        <div
          className="iot--hotspot-tooltip-tab__delete-button-container"
        >
          <button
            className="iot--btn bx--btn bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete hotspot
            <svg
              aria-hidden="true"
              aria-label="Delete this hotspot"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12H14V24H12zM18 12H20V24H18z"
              />
              <path
                d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal/HotspotTooltipTab With Info Message 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="iot--hotspot-tooltip-tab"
      >
        <div
          className="iot--hotspot-editor--tooltip-info-message"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
            />
            <path
              d="M16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17.125h-8v-2.25h2.875v-6.75h-1.875v-2.25h4.125v9h2.875Z"
              data-icon-path="inner-path"
              fill="none"
            />
          </svg>
          <p>
            Select an existing hotspot on the image to edit it or insert one 
          by selecting an option from the toolbar.
          </p>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal/HotspotTooltipTab With Preset Values And Custom Colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="iot--hotspot-tooltip-tab"
      >
        <form
          className="iot--hotspot-editor--tooltip-form"
          data-testid="HotspotTooltipTab"
          onSubmit={[Function]}
        >
          <div
            className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
          >
            <label
              className="bx--label"
              htmlFor="tooltip-form-title"
            >
              Title
            </label>
            <div
              className="bx--text-input__field-outer-wrapper"
            >
              <div
                className="bx--text-input__field-wrapper"
                data-invalid={null}
                data-warn={null}
              >
                <input
                  className="bx--text-input bx--text__input bx--text-input--light"
                  data-testid="HotspotTooltipTab-title-input"
                  disabled={false}
                  id="tooltip-form-title"
                  name="title"
                  onChange={[Function]}
                  onClick={[Function]}
                  placeholder="Enter title for the tooltip"
                  title="Enter title for the tooltip"
                  type="text"
                  value="West building"
                />
              </div>
            </div>
          </div>
          <div
            className="bx--form-item"
          >
            <label
              className="bx--label"
              htmlFor="tooltip-form-description"
            >
              Description
            </label>
            <div
              className="bx--text-area__wrapper"
              data-invalid={null}
            >
              <textarea
                aria-describedby={null}
                aria-invalid={null}
                className="bx--text-area bx--text-area--light"
                cols={50}
                disabled={false}
                id="tooltip-form-description"
                name="description"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="Enter description for the tooltip"
                rows={4}
                value="This is the largest building there is"
              />
            </div>
          </div>
          <div
            className="iot--icon-color-container"
            style={
              Object {
                "--icon-fill-color": "#24a148",
              }
            }
          >
            <div
              className="bx--dropdown__wrapper bx--list-box__wrapper"
              warn={false}
              warnText=""
            >
              <label
                className="bx--label"
                htmlFor="downshift-20-toggle-button"
                id="downshift-20-label"
              >
                Icon
              </label>
              <div
                className="bx--dropdown iot--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                id="tooltip-form-icon"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-20-label downshift-20-toggle-button"
                  className="bx--list-box__field"
                  disabled={false}
                  id="downshift-20-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                  >
                    <div
                      className="iot--dropdown__item"
                      title="Information square filled"
                    >
                      <div
                        className="iot--dropdown__label"
                      >
                        <svg
                          aria-hidden={true}
                          fill="currentColor"
                          focusable="false"
                          height={24}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4ZM16,7a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,7Zm4,17H12V22h3V15H13V13h4v9h3Z"
                          />
                          <path
                            d="M20,22v2H12V22h3V15H13V13h4v9ZM16,7a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,16,7Z"
                            data-icon-path="inner-path"
                            fill="none"
                          />
                        </svg>
                        <div
                          className="iot--dropdown__label__content"
                        >
                          Information square filled
                        </div>
                      </div>
                    </div>
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title />
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-20-label"
                  className="bx--list-box__menu"
                  id="downshift-20-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="listbox"
                  tabIndex={-1}
                />
              </div>
            </div>
            <div
              className="bx--dropdown__wrapper bx--list-box__wrapper"
            >
              <label
                className="bx--label"
                htmlFor="downshift-21-toggle-button"
                id="downshift-21-label"
              >
                Color
              </label>
              <div
                className="bx--dropdown iot--color-dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                id="tooltip-form-color"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <button
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-21-label downshift-21-toggle-button"
                  className="bx--list-box__field"
                  disabled={false}
                  id="downshift-21-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                  >
                    <div
                      className="iot--color-dropdown__item"
                      title="green"
                    >
                      <div
                        className="iot--color-dropdown__item-border"
                      >
                        <div
                          className="iot--color-dropdown__color-sample"
                          style={
                            Object {
                              "backgroundColor": "#24a148",
                            }
                          }
                          title="#24a148"
                        />
                        <div
                          className="iot--color-dropdown__color-name"
                        >
                          green
                        </div>
                      </div>
                    </div>
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-label="Open menu"
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title>
                        Open menu
                      </title>
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-21-label"
                  className="bx--list-box__menu"
                  id="downshift-21-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="listbox"
                  tabIndex={-1}
                />
              </div>
            </div>
          </div>
        </form>
        <div
          className="iot--hotspot-tooltip-tab__delete-button-container"
        >
          <button
            className="iot--btn bx--btn bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete hotspot
            <svg
              aria-hidden="true"
              aria-label="Delete this hotspot"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12H14V24H12zM18 12H20V24H18z"
              />
              <path
                d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
